--- a/css/common.css
+++ b/css/common.css
@@ -26,8 +26,9 @@ button {
 .gallery {
   list-style: none;
   display: flex;
-  justify-content: space-around;
   padding: 0;
+  width: 400px;
+  margin-left: 20px;
 }
 
 .gallery-item {
